--- a/AmonControl/electron/index.html
+++ b/AmonControl/electron/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'; connect-src http://127.0.0.1:8000;"
+      content="default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'; connect-src http://127.0.0.1:8002;"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amon Ground Control</title>
@@ -54,7 +54,7 @@
             </button>
             <button class="drone-card" data-drone="talon" type="button">
               <div class="card-header">
-                <img class="card-logo" src="../../Images/FLIGHTORY_logo.png" alt="Flightory logo" />
+                <img class="card-logo inverted" src="../../Images/FLIGHTORY_logo.png" alt="Flightory logo" />
                 <div class="card-title">Talon 1400</div>
               </div>
               <img
