--- a/FW_Update_app/electron/index.html
+++ b/FW_Update_app/electron/index.html
@@ -108,6 +108,63 @@
           <div class="log-item">System ready. Awaiting connection.</div>
         </div>
       </section>
+
+      <section class="card config-card">
+        <div class="config-header">
+          <h2>Device Configuration</h2>
+          <span class="muted">Read-only for now</span>
+        </div>
+        <div class="config-grid">
+          <div>
+            <span class="label">Mode</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Role</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">RF Channel</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Data Rate</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Power</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Auto ACK</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Addr Width</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Retries</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Retry Delay</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">TX Addr</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Pipe0 RX</span>
+            <span class="value muted">-</span>
+          </div>
+          <div>
+            <span class="label">Pipe1 RX</span>
+            <span class="value muted">-</span>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="./renderer.js"></script>
